[package]
name = "taurus"
authors = ["Sean Ray <seanray410@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1.6"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.16.0", features = ["v4"] }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
regex = "1.5.4"
rcon-rs = { git = "https://github.com/notseanray/rcon-rs" }
sysinfo = "0.33.1"
chrono = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.5.0"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
